Fix footer styling (alignment)

--- a/mediacore/public/styles/base.css
+++ b/mediacore/public/styles/base.css
@@ -80,8 +80,9 @@ a:hover {
 	overflow: hidden;
 }
 #mediacore-footer p {
-	float: left;
+    text-align: center;
 	padding: 5px 0;
+    font-size: 12px;
 }
 
 .mediacore-content {
